# llama2.c

./: .gitignore  CMakeLists.txt  llama_user_chat.txt  run.c  run.cpp  run_chat_far.cpp  run_chat_far_orig1.cpp  run_chat_far_orig2.cpp  run_no_remote.sh
